--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,22 @@
-<h2>Header here...</h2>
+<table>
+    <tr>
+        <td>
+            <p>Ramón Atdiel Pérez Quintana</p>
+            <p>Ser CEO de un empresa de tecnología reconocida mundialmente</p>
+        </td>
+        <td>
+            <img src="../../assets/profilePicture.jpg" width=100 height=auto>
+        </td>
+
+
+        <td>
+            <ul>
+                <li>atdiel.perez9709@gmail.com</li>
+                <li>2721986989</li>
+                <li>Ixtaczoquitlan</li>
+                <li>@quintana-ramon</li>
+             </ul>
+        </td>
+
+    </tr>
+</table>
