--- a/src/app/work-experience/work-experience.component.html
+++ b/src/app/work-experience/work-experience.component.html
@@ -1,1 +1,31 @@
-<h2>work-experience here...</h2>
+<h3>Work Experience</h3>
+
+<table border="0">
+
+<ul *ngFor="let work of workExperience">
+	<li>
+		<tr>
+		   <td>{{ work.fecha }} </td>  <td> {{ work.ubicacion }} </td>
+		</tr>
+		<tr>
+		   <td>{{ work.puesto }} </td>  <td> </td>
+		</tr>
+		<tr>
+		   <td>{{ work.empresa }} </td>  <td> </td>
+		</tr>
+		<tr>
+		   <td> Logros </td>
+		</tr>
+
+                <ul *ngFor="let logro of work.logros">
+		   <li>
+			<tr>
+		           <td>{{ logro.descripcion }} </td>
+		        </tr>
+                   </li>
+		</ul>
+
+	</li>
+</ul>
+
+</table>
