feat(): issue 10 has been completed
"Fixes #10"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,19 @@
   <td colspan="2"><app-header></app-header></td>
 </tr>
 <tr>
-  <td><app-work-experience></app-work-experience></td>
-  <td>Sprint 2 here...</td>
+  <td>
+    <tr>
+      <app-work-experience></app-work-experience>
+    </tr>
+  </td>
+  <td style="vertical-align: top;">
+    <tr>
+      <app-skills></app-skills>
+    </tr>
+    <tr>
+      
+    </tr>
+  </td>
 </tr>
+
 </table>
