issue 12 has been completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,19 @@
-<table border="1">
-<tr>
+<table border="1" style="width: 1000px;">
+<tr style="height: 200px;">
   <td colspan="2"><app-header></app-header></td>
 </tr>
 <tr>
-  <td>
+  <td style="vertical-align: top; width: 600px;">
     <tr>
       <app-work-experience></app-work-experience>
     </tr>
   </td>
-  <td style="vertical-align: top;">
+  <td style="vertical-align: top; width: 400px;">
     <tr>
       <app-skills></app-skills>
     </tr>
     <tr>
-      
+      <app-achievements></app-achievements>
     </tr>
   </td>
 </tr>
