issue #12 has been completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,9 @@
     <tr>
       <app-achievements></app-achievements>
     </tr>
+    <tr>
+      <app-languages></app-languages>
+    </tr>
   </td>
 </tr>
 
