issue #16 has been completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,9 @@
     <tr>
       <app-languages></app-languages>
     </tr>
+    <tr>
+      <app-interests></app-interests>
+    </tr>
   </td>
 </tr>
 
