issue #9 has been completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
     <tr>
       <app-work-experience></app-work-experience>
     </tr>
+    <tr>
+      <app-education></app-education>
+    </tr>
   </td>
   <td style="vertical-align: top; width: 400px;">
     <tr>
